--- a/src/views/Card/style.css
+++ b/src/views/Card/style.css
@@ -1,13 +1,7 @@
-.box{
-  font-family: 'Popins', sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height: 90vh;
-  background-color:black;
-  overflow: hidden;
+.card__container{
+  @apply flex flex-wrap justify-center items-center;
 }
-.container .card{
+.card__container .card{
   position: absolute;
   width:240px;
   height:360px;
@@ -23,19 +17,19 @@
   transition: .5s;
   transform-origin: 50% 100%;
   filter: hue-rotate(calc(var(--i) * 60deg));
-  box-shadow: 0 15px 50px rgba(0, 0, 0, .1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
 }
-.container:hover .card{
+.card__container:hover .card{
   transform: rotate(calc(var(--i) * 5deg)) translate(calc(var(--i) * 120px) ,-50px);
   filter: hue-rotate(calc(var(--i) * 60deg));
   box-shadow: 0 15px 50px rgba(0, 0, 0, .25);
   color: rgba(0, 0, 0, .25);
   cursor: pointer;
 }
-.container:active .card:not(:active){
+.card__container:active .card:not(:active){
   background-color: #333;
 }
-.container .card:active{
+.card__container .card:active{
   translate: calc(var(--i) * 20px) -50px;
   z-index: 999;
 }
