--- a/src/views/ImageWall/style.css
+++ b/src/views/ImageWall/style.css
@@ -1,40 +1,33 @@
-.image-wall{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
-  background-color: #333;
-}
-.imagecontainer{
-  position: relative;
+.image__container{
   display: flex;
   justify-content: center;
   align-items: center;
   transform-style: preserve-3d;
+  width: 100%;
 }
-.imagecontainer .box{
-  width: 200px;
+.image__container .image__box{
+  width: 150px;
   height: 200px;
   position: relative;
   transition: .5s;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #000);
 }
-.imagecontainer .box .img{
+.image__container .image__box .i{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.imagecontainer:hover > :not(:hover){
+.image__container:hover > :not(:hover){
   margin: 0 -20px;
   filter: drop-shadow(0 0 25px #000)
           drop-shadow(0 0 45px #000) ;
   transform: perspective(500px) rotateY(45deg) scale(0.95);
 } 
-.imagecontainer .box:hover ~ .box{
+.image__container .image__box:hover ~ .image__box{
   transform: perspective(500px) rotateY(-45deg) scale(0.95);
 }
-.imagecontainer .box:hover{
+.image__container .image__box:hover{
   transform: perspective(500px) rotateY(0deg) scale(1.25);
 }
