--- a/src/views/MouseFollow/style.css
+++ b/src/views/MouseFollow/style.css
@@ -1,12 +1,3 @@
-.mousebox{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 80vh;
-  background-color: #222;
-  gap: 50px;
-}
 .a{
   position: relative;
   padding: 20px 60px;
@@ -17,6 +8,7 @@
   font-size: 1.5rem;
   user-select: none;
   overflow: hidden;
+  margin: 20px;
 }
 .a .aspan{
   position: relative;
