--- a/src/layout/main/hero/style.css
+++ b/src/layout/main/hero/style.css
@@ -1,5 +1,5 @@
 .card-hero{
-  @apply w-full rounded-xl p-5 max-h-[40vh];
+  @apply w-full rounded-xl p-5 max-h-[40vh] min-h-[10vh] flex-shrink;
   background:linear-gradient(90deg, #d8e8ff 0% , #f9deff 100%);
 }
 
