--- a/src/views/Bubble/style.css
+++ b/src/views/Bubble/style.css
@@ -1,7 +1,8 @@
 .bubblecontainer{
   position: relative;
   width: 100%;
-  height: 90vh;
+  height:100%;
+  overflow:hidden;
 }
 .bubbles{
   display: flex;
@@ -27,7 +28,7 @@
 }
 @keyframes animate{
   0%{
-    transform: translateY(90vh) scale(0);
+    transform: translateY(70vh) scale(0);
   }
   100%{
     transform: translateY(0vh) scale(1);
