--- a/src/views/TimeLine/style.css
+++ b/src/views/TimeLine/style.css
@@ -1,15 +1,15 @@
 .timeline__container{
-  width: 100%;
-  height: 60%;
-  box-sizing:border-box;
-  display: flex;
-  flex-direction: column;
+  @apply flex flex-col p-4;
+}
+.timeline__box{
+  height: 50vh;
+  overflow-y: auto;
 }
 .title{
   @apply mx-auto
 }
 .p{
-  margin: 10px 0;
+  @apply my-2;
 }
 
 .img{
